Fix CTA spacing

--- a/src/styles/blocks/cta.scss
+++ b/src/styles/blocks/cta.scss
@@ -2,7 +2,7 @@
     animation: fade-in-top .4s forwards;
 
     code {
-        background-color: var(--color-gray-200);
+        background-color: var(--secondary-background-color-dark);
         padding: 2px;
     }
 
